--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             finding solutions and determining customer satisfaction.
           </p>
           <a
-            href="https://docs.google.com/document/d/15FpBAgBciFTBmw8_PWth-BQAj83Af3L0/edit?usp=drivesdk&ouid=109463537113578671748&rtpof=true&sd=true"
+            href="https://docs.google.com/document/d/15FpBAgBciFTBmw8_PWth-BQAj83Af3L0/edit?usp=drivesdk&ouid=109463537113578671748&rtpof=true&sd=tru"
             class="btn"
             >Download CV</a
           >
@@ -239,7 +239,7 @@
           </div>
           <ul class="footer_social">
             <li>
-              <a href=" https://github.com/Bharati-Garg"
+              <a href=" https://github.com/Bharati-Gar"
                 ><i class="fab fa-github"></i>
               </a>
             </li>
