--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             finding solutions and determining customer satisfaction.
           </p>
           <a
-            href="#"
+            href="https://drive.google.com/file/d/1T66MuR7sZaTURCjH5dHIOF6uIb42KhvA/view?usp=drivesdk"
             class="btn"
             >Download CV</a
           >
