--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div class="container header_container" id="home">
         <div class="header_left">
           <div class="header_left_img">
-            <img src="images/bharati.jpeg" alt="Model Image" />
+            <img src="images/bharati-top.jpeg" alt="Model Image" />
           </div>
         </div>
         <div class="header_right">
@@ -67,14 +67,13 @@
           <div class="text">
             I am Bharati and I'm a <span class="typing-2"></span>
           </div>
-          <p>
-            I am a front End developer with 1+ year of experience working in
-            Mito infotech and Expert in HTML5,CSS,Bootstrap, Javascript, GitHub.
-            Adapt at contributing to a highly collaborative work environment
+          <p> I have 1.6 year experience of frontend developer and my technical skills are HTML5,
+            CSS3, Bootstrap, JavaScript, SCSS, GitHub, tailwind, jQuery, React, Redux and Router.
+            currently I am working as a frontend developer in Noida. Adapt at contributing to a highly collaborative work environment
             finding solutions and determining customer satisfaction.
           </p>
           <a
-            href="https://drive.google.com/file/d/1T66MuR7sZaTURCjH5dHIOF6uIb42KhvA/view?usp=drivesdk"
+            href="https://docs.google.com/document/d/1Q9DPMlE5bz4u0dwddOhxTiUpVmTaHffbAvc1KRzw9qc/edit?tab=t.0"
             class="btn"
             >Download CV</a
           >
@@ -93,9 +92,9 @@
               <i class="fa-solid fa-code"></i>
               <h3>Frontend Developer</h3>
               <p>
-                I am a front-end developer. I creates websites and applications
-                using web languages such as HTML, CSS, and JavaScript that allow
-                users to access and interact with the site or app.
+                Designed and developed multiple web applications using HTML, CSS, JavaScript, and React
+                - Collaborated with cross-functional teams to identify and prioritize project requirements
+                - Implemented responsive design and mobile-first approach
               </p>
               <a href="#">Learn More</a>
             </div>
@@ -105,9 +104,9 @@
               <i class="fa-solid fa-file-code"></i>
               <h3>PSD to HTML</h3>
               <p>
-                I have a Strong proficiency in converting PSD files and FIGMA
-                design Into HTML and CSS, and I am successfully worked on
-                several major responsive projects and landing webpages.
+                 Utilized HTML5 features like canvas, video, and audio to enhance website functionality.
+                 - Ensured HTML structure and semantics for search engine optimization (SEO).
+                 - Collaborated with designers to implement visually appealing and accessible UI.
               </p>
               <a href="#">Learn More</a>
             </div>
@@ -117,9 +116,9 @@
               <i class="fa-solid fa-laptop-code"></i>
               <h3>Web Development</h3>
               <p>
-                Working on web developer. I have creates maintaining websites
-                and web applications.I use some technical skills HTML, CSS,
-                JavaScript, Bootstrap, React etc.
+                Collaborated with cross-functional teams to identify and prioritize project requirements
+                Collaboration:* Mention teamwork and communication with designers, developers, and
+                stakeholders.
               </p>
               <a href="#">Learn More</a>
             </div>
@@ -183,17 +182,17 @@
     <div class="container portfolio_container" id="portfolio">
       <h2 class="border_bottom">My Portfolio</h2>
       <div class="gallery">
-        <a href="images/hotel.png"
+        <a href="https://bharati-garg.github.io/Hotel-website/"
           ><img src="images/hotel.png" alt="Portfolio 1"
         /></a>
-        <a href="images/foodies.png"
-          ><img src="images/foodies.png" alt="Portfolio 1"
+        <a href="https://pink-flamingo-website.vercel.app/"
+          ><img src="images/Pink-Flamingo.png" alt="Portfolio 2"
         /></a>
-        <a href="images/christmas.png"
-          ><img src="images/christmas.png" alt="Portfolio 1"
+        <a href="https://mocha-figma-design-woad.vercel.app/"
+          ><img src="images/Mocha.png" alt="Portfolio 3"
         /></a>
-        <a href="images/ecom.png"
-          ><img src="images/ecom.png" alt="Portfolio 1"
+        <a href="https://js-ecommerce-website-sigma.vercel.app/"
+          ><img src="images/ecom.png" alt="Portfolio 4"
         /></a>
       </div>
     </div>
@@ -207,8 +206,8 @@
             <h4>Bharati</h4>
           </a>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque sequi
-            nobis enim.
+            Front-end developer with 1.6 year of experience in designing and building responsive web design using
+            HTML5, CSS3, Bootstrap, JavaScript, React..
           </p>
         </div>
 
